test/compilable/imports/checkimports3a.d
module imports.checkimports3a;
void foo() {}
