test/fail_compilation/fail327.d

@safe void foo()
{
    asm { xor EAX,EAX; }
}
